# BG_Looper

./: .config  .config.old  CMakeLists.txt  README.md  bg_looper.c  bg_looper.h  bg_looper_conf.h  bg_looper_setting.c  bg_looper_setting.h  bg_looper_source.h  main  main.c  make.sh  read  task_scheduler.h
config/: .config  .config.old  config.mk
include/: bg_looper.h  bg_looper_conf.h  bg_looper_play.h  bg_looper_setting.h  bg_looper_source.h  kconfig_init.h
sequencer/: chord.c  chord.h  fingerstyle_tech_func.c  fingerstyle_tech_func.h  judgment_and_magic_box.c  judgment_and_magic_box.h  seq_conf.h  seq_setting.c  seq_setting.h  sequence.c  sequencer.c  sequencer.h  sequencer_source.h
src/: bg_looper.c  bg_looper_play.c  bg_looper_setting.c  kconfig_init.c  main.c  task_scheduler.c
